# lidar_rm

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/rplidar_ros/: coordinate_msg.h
devel/include/serial_common/: wind_mill_msg.h
devel/lib/pkgconfig/: rplidar_ros.pc  serial_common.pc
devel/lib/python3/dist-packages/rplidar_ros/msg/: __init__.py  _coordinate_msg.py
devel/lib/python3/dist-packages/serial_common/msg/: __init__.py  _wind_mill_msg.py
devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
devel/lib/serial_common/: serial_common_node
devel/share/common-lisp/ros/rplidar_ros/msg/: _package.lisp  _package_coordinate_msg.lisp  coordinate_msg.lisp  rplidar_ros-msg.asd
devel/share/common-lisp/ros/serial_common/msg/: _package.lisp  _package_wind_mill_msg.lisp  serial_common-msg.asd  wind_mill_msg.lisp
devel/share/gennodejs/ros/rplidar_ros/msg/: _index.js  coordinate_msg.js
devel/share/gennodejs/ros/serial_common/msg/: _index.js  wind_mill_msg.js
devel/share/roseus/ros/rplidar_ros/: manifest.l
devel/share/roseus/ros/rplidar_ros/msg/: coordinate_msg.l
devel/share/roseus/ros/serial_common/: manifest.l
devel/share/roseus/ros/serial_common/msg/: wind_mill_msg.l
devel/share/rplidar_ros/cmake/: rplidar_ros-msg-paths.cmake  rplidar_rosConfig.cmake
devel/share/serial_common/cmake/: serial_common-msg-paths.cmake  serial_commonConfig.cmake
src/rplidar_ros/: CMakeLists.txt  package.xml
src/rplidar_ros/launch/: test_rplidar.launch  test_rplidar_a3.launch
src/rplidar_ros/msg/: coordinate_msg.msg
src/rplidar_ros/src/: client.cpp  node.cpp  test.cpp
